--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-; PlatformIO Project Configuration File
+ ; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -12,20 +12,45 @@
 src_dir = .
 include_dir = .
 
+[env:esp32-c3f]
+#platform = https://github.com/cziter15/platform-espressif32.git
+#platform = espressif32
+#platform = https://github.com/platformio/platform-espressif32
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
+framework = arduino
+board = esp32-c3-devkitm-1
+board_build.mcu = esp32c3
+board_build.filesystem = littlefs
+board_build.partitions = os4.csv
+monitor_filters = esp32_exception_decoder
+build_flags =
+	-Os
+	-DARP_TABLE_SIZE=40
+#build_type = debug
+#build_src_filter = +<*> -<html/*> --<external/*>
+upload_speed = 460800
+monitor_speed = 115200
+lib_ldf_mode = deep
+lib_deps = 
+	Ethernet
+	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
+	knolleary/PubSubClient @ ^2.8
+	https://github.com/OpenThingsIO/OpenThings-Framework-Firmware-Library
+	RobTillaart/ADS1X15
+	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
+
 [env:d1_mini]
 platform = espressif8266@4.2.1
 board = d1_mini
 framework = arduino
-;lib_ldf_mode = chain
 lib_ldf_mode = deep
-lib_deps =
-     https://github.com/ThingPulse/esp8266-oled-ssd1306/archive/4.2.0.zip
-     knolleary/PubSubClient @ ^2.8
-     https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
-     RobTillaart/ADS1X15
-     https://github.com/bluemurder/esp8266-ping
-     https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino/archive/3.13.2.zip
-; ignore html2raw.cpp source file for firmware compilation (external helper program)
+lib_deps = 
+	https://github.com/ThingPulse/esp8266-oled-ssd1306
+	knolleary/PubSubClient
+	https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
+	RobTillaart/ADS1X15
+	https://github.com/bluemurder/esp8266-ping
+	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
 build_src_filter = +<*> -<html/*> --<external/*>
 upload_speed = 460800
 monitor_speed = 115200
@@ -33,7 +58,7 @@ board_build.flash_mode = dio
 board_build.ldscript = eagle.flash.4m2m.ld
 board_build.f_cpu = 160000000L
 board_build.f_flash = 80000000L
-;build_flags = -DENABLE_DEBUG 
+build_flags = -DARP_TABLE_SIZE=40
 
 [env:sanguino_atmega1284p]
 platform = atmelavr
@@ -42,28 +67,20 @@ board_build.f_cpu = 16000000L
 board_build.variant = sanguino
 framework = arduino
 lib_ldf_mode = deep
-lib_deps =
-    https://github.com/UIPEthernet/UIPEthernet/archive/refs/tags/v2.0.12.zip
-    knolleary/PubSubClient @ ^2.8
-    greiman/SdFat @ 1.0.7
-    Wire
+lib_deps = 
+	https://github.com/UIPEthernet/UIPEthernet/archive/refs/tags/v2.0.12.zip
+	knolleary/PubSubClient @ ^2.8
+	greiman/SdFat @ 1.0.7
+	Wire
 build_src_filter = +<*> -<html/*> --<external/*>
-monitor_speed=115200
+monitor_speed = 115200
 
-; The following env is for syntax highlighting only,
-; it is NOT for building the firmware for Linux.
-; To build the firmware for Linux, please follow:
-; https://openthings.freshdesk.com/support/solutions/articles/5000631599
 [env:linux]
 platform = native
 build_flags = 
 	${env.build_flags}
 	-DOSPI
 
-; The following env is for syntax highlighting only,
-; it is NOT for building the firmware for Linux.
-; To build the firmware for Linux, please follow:
-; https://openthings.freshdesk.com/support/solutions/articles/5000631599
 [env:demo]
 platform = native
 build_flags = 
