--- a/platformio.ini
+++ b/platformio.ini
@@ -39,6 +39,18 @@ lib_deps =
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
 
+# to get it running: 
+# 1. You need a OpenSprinkler ESP32-C3f, for example with XH-C3F
+# 2. Change SSD1306Wire.h:81 to use Wire: #if !defined(ARDUINO_ARCH_ESP32) || SOC_I2C_NUM == 1
+# 3. Edit pins_arduino.h: 
+#static const uint8_t SDA = 18;
+#static const uint8_t SCL = 19;
+#
+#static const uint8_t SS = 1;
+#static const uint8_t MOSI = 5;
+#static const uint8_t MISO = 4;
+#static const uint8_t SCK = 3;
+
 [env:d1_mini]
 platform = espressif8266@4.2.1
 board = d1_mini
