Ext Flash support

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,13 +23,16 @@ board_build.mcu = esp32c3
 board_build.filesystem = littlefs
 board_build.partitions = os4.csv
 monitor_filters = esp32_exception_decoder
-build_flags =
-	-Os
-	-DARP_TABLE_SIZE=40
-#build_type = debug
-#build_src_filter = +<*> -<html/*> --<external/*>
-upload_speed = 460800
-monitor_speed = 115200
+#build_flags = -Os
+#upload_speed = 460800
+#monitor_speed = 115200
+#upload_protocol = esptool
+#board_build.flash_mode = qio
+#build_flags = 
+#    -DCORE_DEBUG_LEVEL=0
+#    -DARDUINO_USB_CDC_ON_BOOT=1
+#    -DARDUINO_USB_MODE=1
+#board_upload.before_reset = usb_reset
 lib_ldf_mode = deep
 lib_deps = 
 	Ethernet
@@ -38,7 +41,7 @@ lib_deps =
 	https://github.com/OpenThingsIO/OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
-
+build_src_filter = +<*> -<html/*> --<external/*> 
 # to get it running: 
 # 1. You need a OpenSprinkler ESP32-C3f, for example with XH-C3F
 # 2. Change SSD1306Wire.h:81 to use Wire: #if !defined(ARDUINO_ARCH_ESP32) || SOC_I2C_NUM == 1
@@ -50,7 +53,7 @@ lib_deps =
 #static const uint8_t MOSI = 5;
 #static const uint8_t MISO = 4;
 #static const uint8_t SCK = 3;
-
+	
 [env:d1_mini]
 platform = espressif8266@4.2.1
 board = d1_mini
