ESP32-C3 with 128MB

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [platformio]
 src_dir = .
 include_dir = .
+build_cache_dir = .pio/cache
 
 [env:esp32-c3f]
 #platform = https://github.com/cziter15/platform-espressif32.git
@@ -22,23 +23,18 @@ board = esp32-c3-devkitm-1
 board_build.mcu = esp32c3
 board_build.filesystem = littlefs
 board_build.partitions = os4.csv
+board_build.flash_mode = dio
 monitor_filters = esp32_exception_decoder
-#build_flags = -Os
-#upload_speed = 460800
-#monitor_speed = 115200
-#upload_protocol = esptool
-#board_build.flash_mode = qio
-#build_flags = 
-#    -DCORE_DEBUG_LEVEL=0
-#    -DARDUINO_USB_CDC_ON_BOOT=1
-#    -DARDUINO_USB_MODE=1
-#board_upload.before_reset = usb_reset
-lib_ldf_mode = deep
+upload_speed = 460800
+monitor_speed = 115200
+build_flags = 
+    -Os
+	-DENABLE_DEBUG
 lib_deps = 
 	Ethernet
 	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
 	knolleary/PubSubClient @ ^2.8
-	https://github.com/OpenThingsIO/OpenThings-Framework-Firmware-Library
+	https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
 build_src_filter = +<*> -<html/*> --<external/*> 
@@ -53,7 +49,7 @@ build_src_filter = +<*> -<html/*> --<external/*>
 #static const uint8_t MOSI = 5;
 #static const uint8_t MISO = 4;
 #static const uint8_t SCK = 3;
-	
+
 [env:d1_mini]
 platform = espressif8266@4.2.1
 board = d1_mini
