--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,43 @@ src_dir = .
 include_dir = .
 build_cache_dir = .pio/cache
 
+[env:espc5-12]
+#platform = https://github.com/cziter15/platform-espressif32.git
+#platform = espressif32
+#platform = https://github.com/platformio/platform-espressif32
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
+framework = arduino
+board = esp32-c5-devkitc-1
+board_build.mcu = esp32c5
+board_build.filesystem = littlefs
+board_build.partitions = os4.csv
+board_build.flash_mode = dio
+monitor_filters = esp32_exception_decoder
+upload_speed = 460800
+monitor_speed = 115200
+build_flags = 
+    -Og
+	-DENABLE_DEBUG
+	-DESP32C5
+lib_deps = 
+	Ethernet
+	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
+	knolleary/PubSubClient @ ^2.8
+	https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
+	RobTillaart/ADS1X15
+	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
+build_src_filter = +<*> -<html/*> --<external/*> 
+# to get it running: 
+# 1. You need a OpenSprinkler with ESPC5-12 and W25Q128 external flash
+# 2. Edit pins_arduino.h: 
+#static const uint8_t SDA = 18;
+#static const uint8_t SCL = 19;
+#
+#static const uint8_t SS = 1;
+#static const uint8_t MOSI = 5;
+#static const uint8_t MISO = 4;
+#static const uint8_t SCK = 3;
+
 [env:esp32-c3f]
 #platform = https://github.com/cziter15/platform-espressif32.git
 #platform = espressif32
@@ -25,21 +62,26 @@ board_build.filesystem = littlefs
 board_build.partitions = os4.csv
 board_build.flash_mode = dio
 monitor_filters = esp32_exception_decoder
-upload_speed = 460800
+upload_speed = 921600
 monitor_speed = 115200
 build_flags = 
     -Os
 	-DENABLE_DEBUG
+	-DSERIAL_DEBUG
+	-DESP32C3
+	-I ../OpenThings-Framework-Firmware-Library
+	-I ../arduinoWebSockets/src
 lib_deps = 
 	Ethernet
 	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
 	knolleary/PubSubClient @ ^2.8
-	https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
+	#links2004/WebSockets
+	#https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
-build_src_filter = +<*> -<html/*> --<external/*> 
+build_src_filter = +<*> +<../OpenThings-Framework-Firmware-Library/*> +<../arduinoWebSockets/src/*> -<html/*> --<external/*>
 # to get it running: 
-# 1. You need a OpenSprinkler ESP32-C3f, for example with XH-C3F
+# 1. You need a OpenSprinkler with ESP32-C3f, for example with XH-C3F
 # 2. Change SSD1306Wire.h:81 to use Wire: #if !defined(ARDUINO_ARCH_ESP32) || SOC_I2C_NUM == 1
 # 3. Edit pins_arduino.h: 
 #static const uint8_t SDA = 18;
