--- a/platformio.ini
+++ b/platformio.ini
@@ -35,6 +35,7 @@ lib_deps =
 	Ethernet
 	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
 	knolleary/PubSubClient @ ^2.8
+	https://github.com/opensprinklershop/ArduinoWebSockets
 	https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
@@ -66,6 +67,44 @@ upload_speed = 921600
 monitor_speed = 115200
 build_flags = 
     -Os
+	-DESP32C3
+lib_deps = 
+	Ethernet
+	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
+	knolleary/PubSubClient @ ^2.8
+	https://github.com/opensprinklershop/ArduinoWebSockets
+	https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
+	RobTillaart/ADS1X15
+	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
+build_src_filter = +<*> +<../OpenThings-Framework-Firmware-Library/*> +<../arduinoWebSockets/src/*> -<html/*> --<external/*>
+# to get it running: 
+# 1. You need a OpenSprinkler with ESP32-C3f, for example with XH-C3F
+# 2. Change SSD1306Wire.h:81 to use Wire: #if !defined(ARDUINO_ARCH_ESP32) || SOC_I2C_NUM == 1
+# 3. Edit pins_arduino.h: 
+#static const uint8_t SDA = 18;
+#static const uint8_t SCL = 19;
+#
+#static const uint8_t SS = 1;
+#static const uint8_t MOSI = 5;
+#static const uint8_t MISO = 4;
+#static const uint8_t SCK = 3;
+
+[env:esp32-c3f-debug]
+#platform = https://github.com/cziter15/platform-espressif32.git
+#platform = espressif32
+#platform = https://github.com/platformio/platform-espressif32
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
+framework = arduino
+board = esp32-c3-devkitm-1
+board_build.mcu = esp32c3
+board_build.filesystem = littlefs
+board_build.partitions = os4.csv
+board_build.flash_mode = dio
+monitor_filters = esp32_exception_decoder
+upload_speed = 921600
+monitor_speed = 115200
+build_flags = 
+    -Og
 	-DENABLE_DEBUG
 	-DSERIAL_DEBUG
 	-DESP32C3
@@ -75,8 +114,6 @@ lib_deps =
 	Ethernet
 	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
 	knolleary/PubSubClient @ ^2.8
-	#links2004/WebSockets
-	#https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
 build_src_filter = +<*> +<../OpenThings-Framework-Firmware-Library/*> +<../arduinoWebSockets/src/*> -<html/*> --<external/*>
@@ -100,6 +137,7 @@ lib_ldf_mode = deep
 lib_deps = 
 	https://github.com/ThingPulse/esp8266-oled-ssd1306
 	knolleary/PubSubClient
+	https://github.com/opensprinklershop/ArduinoWebSockets
 	https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/bluemurder/esp8266-ping
