--- a/platformio.ini
+++ b/platformio.ini
@@ -76,7 +76,7 @@ lib_deps =
 	https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
-build_src_filter = +<*> +<../OpenThings-Framework-Firmware-Library/*> +<../arduinoWebSockets/src/*> -<html/*> --<external/*>
+build_src_filter = +<*> -<html/*> --<external/*>
 # to get it running: 
 # 1. You need a OpenSprinkler with ESP32-C3f, for example with XH-C3F
 # 2. Change SSD1306Wire.h:81 to use Wire: #if !defined(ARDUINO_ARCH_ESP32) || SOC_I2C_NUM == 1
