--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ board_build.filesystem = littlefs
 board_build.partitions = os4.csv
 board_build.flash_mode = dio
 monitor_filters = esp32_exception_decoder
-upload_speed = 460800
+upload_speed = 921600
 monitor_speed = 115200
 build_flags = 
     -Og
@@ -43,10 +43,11 @@ build_src_filter = +<*> -<html/*> --<external/*>
 # to get it running: 
 # 1. You need a OpenSprinkler with ESPC5-12 and W25Q128 external flash
 # 2. Edit pins_arduino.h: 
-#static const uint8_t SDA = 18;
-#static const uint8_t SCL = 19;
-#
-#static const uint8_t SS = 1;
+#static const uint8_t TX = 11;
+#static const uint8_t RX = 12;
+#static const uint8_t SDA = 27;
+#static const uint8_t SCL = 26;
+#static const uint8_t SS = 6;
 #static const uint8_t MOSI = 5;
 #static const uint8_t MISO = 4;
 #static const uint8_t SCK = 3;
@@ -70,6 +71,7 @@ build_flags =
 	-DESP32C3
 lib_deps = 
 	Ethernet
+	esp32_https_server
 	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
 	knolleary/PubSubClient @ ^2.8
 	https://github.com/opensprinklershop/ArduinoWebSockets
@@ -107,6 +109,7 @@ build_flags =
     -Og
 	-DENABLE_DEBUG
 	-DSERIAL_DEBUG
+#	-DDEBUG_ESP_PORT=Serial
 	-DESP32C3
 	-I ../OpenThings-Framework-Firmware-Library
 	-I ../arduinoWebSockets/src
