completed rs485 implementation

--- a/platformio.ini
+++ b/platformio.ini
@@ -31,12 +31,18 @@ build_flags =
     -Og
 	-DENABLE_DEBUG
 	-DESP32C5
+	-DHTTPS_LOGLEVEL=2
+  	-DHTTPS_LOGTIMESTAMP
+	-I ../OpenThings-Framework-Firmware-Library
+lib_extra_dirs = ../OpenThings-Framework-Firmware-Library
 lib_deps = 
 	Ethernet
 	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
 	knolleary/PubSubClient @ ^2.8
 	https://github.com/opensprinklershop/ArduinoWebSockets
-	https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
+	https://github.com/meshtastic/esp32_https_server
+	d:\projekte\OpenThings-Framework-Firmware-Library
+	#https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
 build_src_filter = +<*> -<html/*> --<external/*> 
