--- a/platformio.ini
+++ b/platformio.ini
@@ -33,16 +33,16 @@ build_flags =
 	-DESP32C5
 	-DHTTPS_LOGLEVEL=2
   	-DHTTPS_LOGTIMESTAMP
-	-I ../OpenThings-Framework-Firmware-Library
-lib_extra_dirs = ../OpenThings-Framework-Firmware-Library
+#	-I ../OpenThings-Framework-Firmware-Library
+#lib_extra_dirs = ../OpenThings-Framework-Firmware-Library
 lib_deps = 
 	Ethernet
 	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
 	knolleary/PubSubClient @ ^2.8
 	https://github.com/opensprinklershop/ArduinoWebSockets
 	https://github.com/meshtastic/esp32_https_server
-	d:\projekte\OpenThings-Framework-Firmware-Library
-	#https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
+#	d:\projekte\OpenThings-Framework-Firmware-Library
+	https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
 build_src_filter = +<*> -<html/*> --<external/*> 
@@ -54,86 +54,6 @@ build_src_filter = +<*> -<html/*> --<external/*>
 #static const uint8_t SDA = 27;
 #static const uint8_t SCL = 26;
 #static const uint8_t SS = 6;
-#static const uint8_t MOSI = 5;
-#static const uint8_t MISO = 4;
-#static const uint8_t SCK = 3;
-
-[env:esp32-c3f]
-#platform = https://github.com/cziter15/platform-espressif32.git
-#platform = espressif32
-#platform = https://github.com/platformio/platform-espressif32
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
-framework = arduino
-board = esp32-c3-devkitm-1
-board_build.mcu = esp32c3
-board_build.filesystem = littlefs
-board_build.partitions = os4.csv
-board_build.flash_mode = dio
-monitor_filters = esp32_exception_decoder
-upload_speed = 921600
-monitor_speed = 115200
-build_flags = 
-    -Os
-	-DESP32C3
-lib_deps = 
-	Ethernet
-	esp32_https_server
-	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
-	knolleary/PubSubClient @ ^2.8
-	https://github.com/opensprinklershop/ArduinoWebSockets
-	https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
-	RobTillaart/ADS1X15
-	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
-build_src_filter = +<*> -<html/*> --<external/*>
-# to get it running: 
-# 1. You need a OpenSprinkler with ESP32-C3f, for example with XH-C3F
-# 2. Change SSD1306Wire.h:81 to use Wire: #if !defined(ARDUINO_ARCH_ESP32) || SOC_I2C_NUM == 1
-# 3. Edit pins_arduino.h: 
-#static const uint8_t SDA = 18;
-#static const uint8_t SCL = 19;
-#
-#static const uint8_t SS = 1;
-#static const uint8_t MOSI = 5;
-#static const uint8_t MISO = 4;
-#static const uint8_t SCK = 3;
-
-[env:esp32-c3f-debug]
-#platform = https://github.com/cziter15/platform-espressif32.git
-#platform = espressif32
-#platform = https://github.com/platformio/platform-espressif32
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
-framework = arduino
-board = esp32-c3-devkitm-1
-board_build.mcu = esp32c3
-board_build.filesystem = littlefs
-board_build.partitions = os4.csv
-board_build.flash_mode = dio
-monitor_filters = esp32_exception_decoder
-upload_speed = 921600
-monitor_speed = 115200
-build_flags = 
-    -Og
-	-DENABLE_DEBUG
-	-DSERIAL_DEBUG
-#	-DDEBUG_ESP_PORT=Serial
-	-DESP32C3
-	-I ../OpenThings-Framework-Firmware-Library
-	-I ../arduinoWebSockets/src
-lib_deps = 
-	Ethernet
-	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
-	knolleary/PubSubClient @ ^2.8
-	RobTillaart/ADS1X15
-	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
-build_src_filter = +<*> +<../OpenThings-Framework-Firmware-Library/*> +<../arduinoWebSockets/src/*> -<html/*> --<external/*>
-# to get it running: 
-# 1. You need a OpenSprinkler with ESP32-C3f, for example with XH-C3F
-# 2. Change SSD1306Wire.h:81 to use Wire: #if !defined(ARDUINO_ARCH_ESP32) || SOC_I2C_NUM == 1
-# 3. Edit pins_arduino.h: 
-#static const uint8_t SDA = 18;
-#static const uint8_t SCL = 19;
-#
-#static const uint8_t SS = 1;
 #static const uint8_t MOSI = 5;
 #static const uint8_t MISO = 4;
 #static const uint8_t SCK = 3;
