Added copilot instructions

--- a/platformio.ini
+++ b/platformio.ini
@@ -86,8 +86,20 @@ monitor_filters = colorize, esp8266_exception_decoder
 [env:linux]
 platform = native
 build_flags = 
-	${env.build_flags}
 	-DOSPI
+	-lpthread
+	-lmosquitto
+	-lssl
+	-lcrypto
+	-std=c++14
+	-Iexternal/influxdb-cpp
+lib_deps = 
+	https://github.com/ThingPulse/esp8266-oled-ssd1306
+	https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
+	https://github.com/orca-zhang/influxdb-cpp.git
+; NOTE: This environment requires Linux or WSL to build.
+; On Windows, use WSL: cd /mnt/d/Projekte/openSprinkler-firmware-esp32 && pio run -e linux
+; Or use the build.sh script in WSL
 
 [env:demo]
 platform = native
