BLE/Zigbee adjustments

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,35 +17,48 @@ build_cache_dir = .pio/cache
 #platform = https://github.com/cziter15/platform-espressif32.git
 #platform = espressif32
 #platform = https://github.com/platformio/platform-espressif32
+# See: https://community.platformio.org/t/esp32c6-arduino-3-00-and-zigbee-support/40094/18
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
 framework = arduino
+platform_packages = 
+	framework-esp-idf @ https://github.com/espressif/esp-idf.git#v5.1.2
 board = esp32-c5-devkitc-1
 board_build.mcu = esp32c5
 board_build.filesystem = littlefs
 board_build.partitions = os4.csv
 board_build.flash_mode = dio
+debug_tool = esp-builtin
+debug_init_break = tbreak setup
+debug_speed = 5000
 monitor_filters = esp32_exception_decoder
 upload_speed = 921600
 monitor_speed = 115200
 build_flags = 
-    -Og
-	-DENABLE_DEBUG
-	-DESP32C5
-	-DHTTPS_LOGLEVEL=2
-  	-DHTTPS_LOGTIMESTAMP
-#	-I ../OpenThings-Framework-Firmware-Library
-#lib_extra_dirs = ../OpenThings-Framework-Firmware-Library
+	-D ESP32C5
+	-D ZIGBEE_MODE_ZCZR
+	-D ENABLE_DEBUG
+	-D SERIAL_DEBUG
+	-D OTF_DEBUG_MODE=1
+#	-D CORE_DEBUG_LEVEL=5
+	-D ARP_TABLE_SIZE=40
+	-I ../OpenThings-Framework-Firmware-Library
+	; mbedTLS Memory Optimization for ESP32-C5 (reduce buffer sizes)
+	-D MBEDTLS_SSL_IN_CONTENT_LEN=4096
+	-D MBEDTLS_SSL_OUT_CONTENT_LEN=4096
+	-D MBEDTLS_MPI_MAX_SIZE=512
+extra_scripts = 
+	pre:fix_linker.py
+lib_extra_dirs = ../OpenThings-Framework-Firmware-Library
 lib_deps = 
 	Ethernet
+	Zigbee
 	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
 	knolleary/PubSubClient @ ^2.8
 	https://github.com/opensprinklershop/ArduinoWebSockets
-	https://github.com/meshtastic/esp32_https_server
-#	d:\projekte\OpenThings-Framework-Firmware-Library
-	https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
+	symlink://../OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
-build_src_filter = +<*> -<html/*> --<external/*> 
+build_src_filter = +<*> +<*.ino> -<html/*> --<external/*> --<ospi-analog/*>
 # to get it running: 
 # 1. You need a OpenSprinkler with ESPC5-12 and W25Q128 external flash
 # 2. Edit pins_arduino.h: 
