--- a/platformio.ini
+++ b/platformio.ini
@@ -41,21 +41,22 @@ build_flags =
 	-D OTF_DEBUG_MODE=1
 #	-D CORE_DEBUG_LEVEL=5
 	-D ARP_TABLE_SIZE=40
-	-I ../OpenThings-Framework-Firmware-Library
+#	-I ../OpenThings-Framework-Firmware-Library
 	; mbedTLS Memory Optimization for ESP32-C5 (reduce buffer sizes)
 	-D MBEDTLS_SSL_IN_CONTENT_LEN=4096
 	-D MBEDTLS_SSL_OUT_CONTENT_LEN=4096
 	-D MBEDTLS_MPI_MAX_SIZE=512
 extra_scripts = 
 	pre:fix_linker.py
-lib_extra_dirs = ../OpenThings-Framework-Firmware-Library
+#lib_extra_dirs = ../OpenThings-Framework-Firmware-Library
 lib_deps = 
 	Ethernet
 	Zigbee
 	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
 	knolleary/PubSubClient @ ^2.8
-	https://github.com/opensprinklershop/ArduinoWebSockets
-	symlink://../OpenThings-Framework-Firmware-Library
+	links2004/WebSockets
+	#symlink://../OpenThings-Framework-Firmware-Library
+	https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
 build_src_filter = +<*> +<*.ino> -<html/*> --<external/*> --<ospi-analog/*>
@@ -71,7 +72,7 @@ build_src_filter = +<*> +<*.ino> -<html/*> --<external/*> --<ospi-analog/*>
 #static const uint8_t MISO = 4;
 #static const uint8_t SCK = 3;
 
-[env:d1_mini]
+[env:os3x_esp8266]
 platform = espressif8266@4.2.1
 board = d1_mini
 framework = arduino
@@ -79,8 +80,8 @@ lib_ldf_mode = deep
 lib_deps = 
 	https://github.com/ThingPulse/esp8266-oled-ssd1306
 	knolleary/PubSubClient
-	https://github.com/opensprinklershop/ArduinoWebSockets
 	https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
+	links2004/WebSockets
 	RobTillaart/ADS1X15
 	https://github.com/bluemurder/esp8266-ping
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
