--- a/platformio.ini
+++ b/platformio.ini
@@ -42,15 +42,8 @@ build_flags =
 	#-D OTF_DEBUG_MODE=1
 	#-D CORE_DEBUG_LEVEL=2
 	-D ARP_TABLE_SIZE=40
-	#-I ../OpenThings-Framework-Firmware-Library
-	; mbedTLS Memory Optimization for ESP32-C5 (reduce buffer sizes)
-	;-D MBEDTLS_SSL_MAX_CONTENT_LEN=4096 ; Reduce RAM usage (standard is 16384)
-	;-D MBEDTLS_SSL_IN_CONTENT_LEN=4096
-	;-D MBEDTLS_SSL_OUT_CONTENT_LEN=4096
-	;-D CONFIG_MBEDTLS_DYNAMIC_BUFFER_SIZE=1
-	;-D CONFIG_MBEDTLS_DYNAMIC_FREE_CA_CERT=1
-	;-D MBEDTLS_MPI_MAX_SIZE=512
-	 ; --- Core Cryptography & 0x6E00 Fix ---
+	-I ../OpenThings-Framework-Firmware-Library
+	; --- Core Cryptography & 0x6E00 Fix ---
     -D MBEDTLS_AES_C        ; Enable AES hardware/software support
     -D MBEDTLS_GCM_C        ; Required for modern AEAD cipher suites (GCM mode)
     -D MBEDTLS_SHA256_C     ; Standard hashing for signatures and handshakes
@@ -61,24 +54,26 @@ build_flags =
     ; --- Key Exchange Methods ---
     -D MBEDTLS_KEY_EXCHANGE_ECDHE_RSA_ENABLED   ; Common for RSA-based certificates
     -D MBEDTLS_KEY_EXCHANGE_ECDHE_ECDSA_ENABLED ; Common for modern ECC-based certificates
-    ; --- Protocol Versions (2025 Standards) ---
+    ; --- Protocol Versions (2025 Standards) --- 
     -D MBEDTLS_SSL_PROTO_TLS1_2     ; Maintain compatibility with most servers
     -D MBEDTLS_SSL_PROTO_TLS1_3     ; Recommended standard for 2025 security
+    ; --- TLS 1.3 Cipher Suites (Recommended) ---
+    -D MBEDTLS_SSL_CIPHERSUITES_TLS13
+    -D MBEDTLS_KEY_EXCHANGE_PSK_ENABLED
+    -D MBEDTLS_KEY_EXCHANGE_ECDHE_PSK_ENABLED
     ; --- Debugging & Diagnostics ---
     #-D MBEDTLS_DEBUG_C      ; Enables mbedtls_debug_set_threshold() and logging
-build_unflags =
-    -D MBEDTLS_SSL_KEEP_PEER_CERTIFICATE ; Needed for certificate verification
 extra_scripts = 
 	pre:fix_linker.py
-#lib_extra_dirs = ../OpenThings-Framework-Firmware-Library
+lib_extra_dirs = ../OpenThings-Framework-Firmware-Library
 lib_deps = 
 	Ethernet
 	Zigbee
 	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
 	knolleary/PubSubClient @ ^2.8
 	links2004/WebSockets
-	#symlink://../OpenThings-Framework-Firmware-Library
-	https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
+	symlink://../OpenThings-Framework-Firmware-Library
+	#https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
 build_src_filter = +<*> +<*.ino> -<html/*> --<external/*> --<ospi-analog/*>
