--- a/platformio.ini
+++ b/platformio.ini
@@ -38,33 +38,17 @@ build_flags =
 	-D ESP32C5
 	-D ZIGBEE_MODE_ZCZR
 	-D ENABLE_DEBUG
-	#-D SERIAL_DEBUG
-	#-D OTF_DEBUG_MODE=1
-	#-D CORE_DEBUG_LEVEL=2
+	-D SERIAL_DEBUG
+	-D OTF_DEBUG_MODE=1
+	-D CORE_DEBUG_LEVEL=4
 	-D ARP_TABLE_SIZE=40
 	-I ../OpenThings-Framework-Firmware-Library
-	; --- Core Cryptography & 0x6E00 Fix ---
-    -D MBEDTLS_AES_C        ; Enable AES hardware/software support
-    -D MBEDTLS_GCM_C        ; Required for modern AEAD cipher suites (GCM mode)
-    -D MBEDTLS_SHA256_C     ; Standard hashing for signatures and handshakes
-    -D MBEDTLS_ECP_C        ; Enable Elliptic Curve over Prime fields
-    -D MBEDTLS_ECDH_C       ; Key exchange via Elliptic Curve Diffie-Hellman
-    -D MBEDTLS_ECDSA_C      ; Authentication via Elliptic Curve Digital Signature Algorithm
-    -D MBEDTLS_ECP_DP_SECP256R1_ENABLED ; Most common curve (NIST P-256) used by servers
-    ; --- Key Exchange Methods ---
-    -D MBEDTLS_KEY_EXCHANGE_ECDHE_RSA_ENABLED   ; Common for RSA-based certificates
-    -D MBEDTLS_KEY_EXCHANGE_ECDHE_ECDSA_ENABLED ; Common for modern ECC-based certificates
-    ; --- Protocol Versions (2025 Standards) --- 
-    -D MBEDTLS_SSL_PROTO_TLS1_2     ; Maintain compatibility with most servers
-    -D MBEDTLS_SSL_PROTO_TLS1_3     ; Recommended standard for 2025 security
-    ; --- TLS 1.3 Cipher Suites (Recommended) ---
-    -D MBEDTLS_SSL_CIPHERSUITES_TLS13
-    -D MBEDTLS_KEY_EXCHANGE_PSK_ENABLED
-    -D MBEDTLS_KEY_EXCHANGE_ECDHE_PSK_ENABLED
-    ; --- Debugging & Diagnostics ---
-    #-D MBEDTLS_DEBUG_C      ; Enables mbedtls_debug_set_threshold() and logging
+	; mbedTLS/TLS configuration is controlled via sdkconfig.defaults + pre:configure_mbedtls.py
+	; --- Debugging & Diagnostics ---
+	#-D MBEDTLS_DEBUG_C
 extra_scripts = 
 	pre:fix_linker.py
+	pre:configure_mbedtls.py
 lib_extra_dirs = ../OpenThings-Framework-Firmware-Library
 lib_deps = 
 	Ethernet
@@ -135,5 +119,11 @@ lib_deps =
 [env:demo]
 platform = native
 build_flags = 
-	${env.build_flags}
 	-DDEMO
+	-DDISABLE_INFLUXDB
+	-std=c++14
+
+; The demo environment is a minimal native (Windows-friendly) compile/link sanity-check.
+; Full native OSPI (Linux/WSL) builds should use `env:linux`.
+build_src_filter = -<*> +<demo_build.cpp>
+; NOTE: For full native OSPI (Linux/WSL) builds use `env:linux`.
