--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,6 @@ include_dir = .
 build_cache_dir = .pio/cache
 
 [env:espc5-12]
-#platform = https://github.com/cziter15/platform-espressif32.git
-#platform = espressif32
-#platform = https://github.com/platformio/platform-espressif32
 # See: https://community.platformio.org/t/esp32c6-arduino-3-00-and-zigbee-support/40094/18
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
 framework = arduino
@@ -32,32 +29,36 @@ debug_init_break = tbreak setup
 debug_speed = 5000
 monitor_filters = esp32_exception_decoder
 upload_speed = 921600
+upload_protocol = espota
+upload_port = 192.168.0.56
+upload_flags = 
+    --auth=opendoor
 monitor_speed = 115200
 #build_type = debug
 build_flags = 
 	-D ESP32C5
 	-D ZIGBEE_MODE_ZCZR
 	-D ENABLE_DEBUG
-	-D SERIAL_DEBUG
-	-D OTF_DEBUG_MODE=1
-	-D CORE_DEBUG_LEVEL=4
-	-D ARP_TABLE_SIZE=40
-	-I ../OpenThings-Framework-Firmware-Library
-	; mbedTLS/TLS configuration is controlled via sdkconfig.defaults + pre:configure_mbedtls.py
-	; --- Debugging & Diagnostics ---
-	#-D MBEDTLS_DEBUG_C
+	#-D SERIAL_DEBUG
+	#-D OTF_DEBUG_MODE=1
+	#-D CORE_DEBUG_LEVEL=4
+	#-D ARP_TABLE_SIZE=40
+build_unflags = 
+	-DCONFIG_OPENTHREAD_ENABLED
+	-DCONFIG_IEEE802154_ENABLED
+# Exclude OpenThread library to prevent symbol conflicts with Zigbee
+board_build.cmake_extra_args =
+    -DCONFIG_OPENTHREAD_ENABLED=n
+    -DCONFIG_IEEE802154_ENABLED=y
 extra_scripts = 
 	pre:fix_linker.py
-	pre:configure_mbedtls.py
-lib_extra_dirs = ../OpenThings-Framework-Firmware-Library
 lib_deps = 
 	Ethernet
 	Zigbee
 	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
 	knolleary/PubSubClient @ ^2.8
 	links2004/WebSockets
-	symlink://../OpenThings-Framework-Firmware-Library
-	#https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
+	https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
 build_src_filter = +<*> +<*.ino> -<html/*> --<external/*> --<ospi-analog/*>
@@ -72,6 +73,55 @@ build_src_filter = +<*> +<*.ino> -<html/*> --<external/*> --<ospi-analog/*>
 #static const uint8_t MOSI = 5;
 #static const uint8_t MISO = 4;
 #static const uint8_t SCK = 3;
+
+[env:espc5-12-matter]
+# Matter-enabled build (WiFi-based, no Zigbee to avoid RF conflicts)
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
+framework = arduino
+platform_packages = 
+	framework-esp-idf @ https://github.com/espressif/esp-idf.git#v5.1.2
+board = esp32-c5-devkitc-1
+board_build.mcu = esp32c5
+board_build.filesystem = littlefs
+board_build.partitions = os4_matter.csv
+board_build.flash_mode = dio
+debug_tool = esp-builtin
+debug_init_break = tbreak setup
+debug_speed = 5000
+monitor_filters = esp32_exception_decoder
+upload_speed = 921600
+upload_protocol = espota
+upload_port = 192.168.0.56
+upload_flags = 
+    --auth=opendoor
+monitor_speed = 115200
+build_flags = 
+	-D ESP32C5
+	-D ENABLE_DEBUG
+	# Matter or Zigbee - only one can be enabled due to RF conflicts
+	-D ENABLE_MATTER
+	# Matter optimizations
+	-D CHIP_CONFIG_MAX_FABRICS=6
+	-D CONFIG_ENABLE_CHIP_SHELL=0
+	-D CHIP_DEVICE_CONFIG_ENABLE_THREAD=0
+	-D CHIP_DEVICE_CONFIG_ENABLE_WIFI=1
+	# Disable Zigbee explicitly - conflicts with Matter on single 802.15.4 radio
+	-D CONFIG_ZB_ENABLED=0
+	-D CONFIG_ENABLE_ZIGBEE=0
+extra_scripts = 
+	pre:fix_linker.py
+lib_ignore = 
+	Zigbee
+	BLE
+lib_deps = 
+	Ethernet
+	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
+	knolleary/PubSubClient @ ^2.8
+	links2004/WebSockets
+	https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
+	RobTillaart/ADS1X15
+	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
+build_src_filter = +<*> +<*.ino> -<html/*> --<external/*> --<ospi-analog/*> -<sensor_ble.*> -<sensor_ospi_ble.*>
 
 [env:os3x_esp8266]
 platform = espressif8266@4.2.1
