Refactor sensor code for improved debugging and Zigbee integration
- Updated DEBUG_PRINTF calls to use PROGMEM strings for better memory management in sensor_truebner_rs485.cpp and sensor_usbrs485.cpp.
- Enhanced weather sensor logging with PROGMEM strings in sensor_weather.cpp.
- Refactored Zigbee sensor handling in sensor_zigbee.cpp:
  - Removed unnecessary stop function for Zigbee, allowing it to remain active.
  - Added functions to check if Zigbee is active and ensure it starts when needed.
  - Improved logging for Zigbee device joining and attribute reporting.
- Updated sensor API to include connect and loop functions for BLE and Zigbee maintenance.
- Added RF mode switching functionality in opensprinkler_rf.cpp, allowing dynamic switching between Matter and Zigbee modes.
- Introduced new header file opensprinkler_rf.h to define RF modes and related functions.
- General code cleanup and improved readability across multiple files.

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,53 +15,53 @@ build_cache_dir = .pio/cache
 
 [env:espc5-12]
 # See: https://community.platformio.org/t/esp32c6-arduino-3-00-and-zigbee-support/40094/18
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
+platform = https://github.com/pioarduino/platform-espressif32.git
 framework = arduino
-platform_packages = 
-	framework-esp-idf @ https://github.com/espressif/esp-idf.git#v5.1.2
 board = esp32-c5-devkitc-1
 board_build.mcu = esp32c5
 board_build.filesystem = littlefs
-board_build.partitions = os4.csv
+board_build.partitions = os4_matter.csv
 board_build.flash_mode = dio
-debug_tool = esp-builtin
-debug_init_break = tbreak setup
-debug_speed = 5000
 monitor_filters = esp32_exception_decoder
-upload_speed = 921600
-upload_protocol = espota
-upload_port = 192.168.0.56
-upload_flags = 
-    --auth=opendoor
+upload_speed = 460800
+#upload_protocol = espota
+#upload_port = 192.168.0.56          # Adjust to your ESP32 IP address
+#upload_flags = 
+#    --auth=opendoor                  # Password must match OpenSprinkler password
 monitor_speed = 115200
-#build_type = debug
+build_type = debug
+; Framework-bundled libraries that we want to fully exclude unless explicitly enabled.
+; This prevents PlatformIO LDF from compiling/linking them and removes them from the dependency graph.
+lib_ignore =
+	Zigbee
+	Matter
+	BLE
+	BT
 build_flags = 
 	-D ESP32C5
-	-D ZIGBEE_MODE_ZCZR
+	#-D OS_ENABLE_ZIGBEE
+	#-D OS_ENABLE_BLE
+	#-D OS_ENABLE_MATTER
 	-D ENABLE_DEBUG
-	#-D SERIAL_DEBUG
-	#-D OTF_DEBUG_MODE=1
-	#-D CORE_DEBUG_LEVEL=4
-	#-D ARP_TABLE_SIZE=40
+	-D SERIAL_DEBUG
+	-I..\OpenThings-Framework-Firmware-Library
+	-flto
+	-Os
+	-Wl,--gc-sections
 build_unflags = 
-	-DCONFIG_OPENTHREAD_ENABLED
-	-DCONFIG_IEEE802154_ENABLED
-# Exclude OpenThread library to prevent symbol conflicts with Zigbee
-board_build.cmake_extra_args =
-    -DCONFIG_OPENTHREAD_ENABLED=n
-    -DCONFIG_IEEE802154_ENABLED=y
+	-fno-lto
 extra_scripts = 
 	pre:fix_linker.py
 lib_deps = 
 	Ethernet
-	Zigbee
-	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
+	https://github.com/ThingPulse/esp8266-oled-ssd1306/archive/4.2.0.zip
 	knolleary/PubSubClient @ ^2.8
-	links2004/WebSockets
-	https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
+	https://github.com/OpenSprinklerShop/ArduinoWebSockets
+	#https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
+	symlink://../OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
-build_src_filter = +<*> +<*.ino> -<html/*> --<external/*> --<ospi-analog/*>
+build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sensor_ospi*> -<opensprinkler_matter.cpp>
 # to get it running: 
 # 1. You need a OpenSprinkler with ESPC5-12 and W25Q128 external flash
 # 2. Edit pins_arduino.h: 
@@ -74,55 +74,6 @@ build_src_filter = +<*> +<*.ino> -<html/*> --<external/*> --<ospi-analog/*>
 #static const uint8_t MISO = 4;
 #static const uint8_t SCK = 3;
 
-[env:espc5-12-matter]
-# Matter-enabled build (WiFi-based, no Zigbee to avoid RF conflicts)
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
-framework = arduino
-platform_packages = 
-	framework-esp-idf @ https://github.com/espressif/esp-idf.git#v5.1.2
-board = esp32-c5-devkitc-1
-board_build.mcu = esp32c5
-board_build.filesystem = littlefs
-board_build.partitions = os4_matter.csv
-board_build.flash_mode = dio
-debug_tool = esp-builtin
-debug_init_break = tbreak setup
-debug_speed = 5000
-monitor_filters = esp32_exception_decoder
-upload_speed = 921600
-upload_protocol = espota
-upload_port = 192.168.0.56
-upload_flags = 
-    --auth=opendoor
-monitor_speed = 115200
-build_flags = 
-	-D ESP32C5
-	-D ENABLE_DEBUG
-	# Matter or Zigbee - only one can be enabled due to RF conflicts
-	-D ENABLE_MATTER
-	# Matter optimizations
-	-D CHIP_CONFIG_MAX_FABRICS=6
-	-D CONFIG_ENABLE_CHIP_SHELL=0
-	-D CHIP_DEVICE_CONFIG_ENABLE_THREAD=0
-	-D CHIP_DEVICE_CONFIG_ENABLE_WIFI=1
-	# Disable Zigbee explicitly - conflicts with Matter on single 802.15.4 radio
-	-D CONFIG_ZB_ENABLED=0
-	-D CONFIG_ENABLE_ZIGBEE=0
-extra_scripts = 
-	pre:fix_linker.py
-lib_ignore = 
-	Zigbee
-	BLE
-lib_deps = 
-	Ethernet
-	https://github.com/ThingPulse/esp8266-oled-ssd1306.git
-	knolleary/PubSubClient @ ^2.8
-	links2004/WebSockets
-	https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
-	RobTillaart/ADS1X15
-	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
-build_src_filter = +<*> +<*.ino> -<html/*> --<external/*> --<ospi-analog/*> -<sensor_ble.*> -<sensor_ospi_ble.*>
-
 [env:os3x_esp8266]
 platform = espressif8266@4.2.1
 board = d1_mini
@@ -132,7 +83,7 @@ lib_deps =
 	https://github.com/ThingPulse/esp8266-oled-ssd1306
 	knolleary/PubSubClient
 	https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
-	links2004/WebSockets
+	https://github.com/OpenSprinklerShop/ArduinoWebSockets
 	RobTillaart/ADS1X15
 	https://github.com/bluemurder/esp8266-ping
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
