Entferne nicht persistente MQTT-Felder und verbessere BLE-Geräteinformationen mit UUID und Namen

--- a/platformio.ini
+++ b/platformio.ini
@@ -35,15 +35,13 @@ build_type = debug
 lib_ignore =
 	Zigbee
 	Matter
-	BLE
-	BT
 build_flags = 
 	-D ESP32C5
 	#-D OS_ENABLE_ZIGBEE
-	#-D OS_ENABLE_BLE
+	-D OS_ENABLE_BLE
 	#-D OS_ENABLE_MATTER
 	-D ENABLE_DEBUG
-	-D SERIAL_DEBUG
+	#-D SERIAL_DEBUG
 	-I..\OpenThings-Framework-Firmware-Library
 	-flto
 	-Os
