Enhance OpenSprinkler firmware with various improvements and bug fixes
- Added support for handling IP display in AP mode for ESP8266/ESP32.
- Integrated Arduino OTA handling in the main loop for easier firmware updates.
- Improved MAC address retrieval logic in get_ap_ssid() to handle all-zero MAC cases.
- Refactored on_ap_scan() to streamline network scanning and response handling.
- Updated server_json_options_main() to ensure compatibility with ESP8266.
- Enhanced BLE sensor handling by adding MAC address configuration and improving connection stability.
- Simplified sensor configuration parsing in server_sensor_config() using LinkedMap for better maintainability.
- Removed deprecated I2C RS485 address checks to clean up the codebase.
- Updated package.json to include repository and bug tracking information.
- Adjusted platformio.ini for correct upload port configuration.
- Added new dependencies in package.json for improved functionality.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "There are three methods to compile the firmware. You can choose any of them.",
   "main": "index.js",
   "directories": {
+    "doc": "docs",
     "example": "examples"
   },
   "scripts": {
@@ -13,6 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "html-minifier-terser": "^7.2.0"
-  }
+    "html-minifier-terser": "^7.2.0",
+    "pako": "^2.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/opensprinklershop/OpenSprinkler-Firmware.git"
+  },
+  "bugs": {
+    "url": "https://github.com/opensprinklershop/OpenSprinkler-Firmware/issues"
+  },
+  "homepage": "https://github.com/opensprinklershop/OpenSprinkler-Firmware#readme"
 }
