--- a/platformio.ini
+++ b/platformio.ini
@@ -92,8 +92,15 @@ board_build.flash_mode = dio
 board_build.ldscript = eagle.flash.4m2m.ld
 board_build.f_cpu = 160000000L
 board_build.f_flash = 80000000L
-build_flags = -DARP_TABLE_SIZE=40
-;build_flags = -DENABLE_DEBUG 
+#build_flags = -DARP_TABLE_SIZE=40
+build_type = debug
+build_flags = 
+	-DENABLE_DEBUG 
+    -DARP_TABLE_SIZE=40
+    -Os
+    -ffunction-sections
+    -fdata-sections
+    -Wl,--gc-sections
 monitor_filters = colorize, esp8266_exception_decoder
 ;ESP8266;ARDUINO;DEBUG_ESP_SSL;DEBUG_ESP_PORT)
 
