Refactor code structure for improved readability and maintainability

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ board_build.mcu = esp32c5
 board_build.filesystem = littlefs
 board_build.partitions = os4_matter.csv
 board_build.flash_mode = dio
+board_build.f_cpu = 240000000L
 monitor_filters = esp32_exception_decoder
 upload_speed = 460800
 #upload_protocol = espota
@@ -96,7 +97,6 @@ board_build.f_flash = 80000000L
 build_type = debug
 build_flags = 
 	-DENABLE_DEBUG 
-    -DARP_TABLE_SIZE=40
     -Os
     -ffunction-sections
     -fdata-sections
