--- a/platformio.ini
+++ b/platformio.ini
@@ -35,6 +35,7 @@ board_build.ldscript = eagle.flash.4m2m.ld
 board_build.f_cpu = 160000000L
 board_build.f_flash = 80000000L
 build_flags =
+    -DARP_TABLE_SIZE=40
     -Os
     -ffunction-sections
     -fdata-sections
