Fixed weather config saving

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,7 +34,7 @@ build_type = debug
 ; Framework-bundled libraries that we want to fully exclude unless explicitly enabled.
 ; This prevents PlatformIO LDF from compiling/linking them and removes them from the dependency graph.
 lib_ignore =
-	Zigbee
+	Zigbee  ; Re-enabled for Zigbee End Device mode
 	Matter
 build_flags = 
 	-D ESP32C5
