--- a/platformio.ini
+++ b/platformio.ini
@@ -13,16 +13,27 @@ src_dir = .
 include_dir = .
 build_cache_dir = .pio/cache
 
-[env:espc5-12]
+[env:esp32-c5]
+# to get it running: 
+# 1. You need a OpenSprinkler with ESP32-C5-WROOM-1-N8R8 and W25Q128 external flash
+# 2. Edit pins_arduino.h: 
+#static const uint8_t TX = 11;
+#static const uint8_t RX = 12;
+#static const uint8_t SDA = 0;
+#static const uint8_t SCL = 1;
+#static const uint8_t SS = 5;
+#static const uint8_t MOSI = 13;
+#static const uint8_t MISO = 14;
+#static const uint8_t SCK = 6;
 # See: https://community.platformio.org/t/esp32c6-arduino-3-00-and-zigbee-support/40094/18
 platform = https://github.com/pioarduino/platform-espressif32.git
 framework = arduino
-board = esp32-c5-devkitc-1
+board = os4proEsp32
 board_build.mcu = esp32c5
 board_build.filesystem = littlefs
 board_build.partitions = os4_matter.csv
-board_build.flash_mode = dio
-board_build.f_cpu = 240000000L
+board_build.sdkconfig = sdkconfig.esp32-c5
+upload_protocol = esptool
 monitor_filters = esp32_exception_decoder
 upload_speed = 460800
 #upload_protocol = espota
@@ -31,18 +42,18 @@ upload_speed = 460800
 #    --auth=opendoor                  # Password must match OpenSprinkler password
 monitor_speed = 115200
 build_type = debug
-; Framework-bundled libraries that we want to fully exclude unless explicitly enabled.
-; This prevents PlatformIO LDF from compiling/linking them and removes them from the dependency graph.
-lib_ignore =
-	Zigbee  ; Re-enabled for Zigbee End Device mode
-	Matter
 build_flags = 
+	-D BOARD_HAS_PSRAM
 	-D ESP32C5
-	#-D OS_ENABLE_ZIGBEE
+	#-D OS_ENABLE_ZIGBEE 
 	-D OS_ENABLE_BLE
-	#-D OS_ENABLE_MATTER
+	-D ENABLE_MATTER
 	-D ENABLE_DEBUG
+	-D OTF_USE_PSRAM=1
+	-D OTF_USE_PSRAM_FOR_SSL=1
+	-D OTF_ENABLE_PSRAM_POOL=1
 	#-D SERIAL_DEBUG
+	#-D ZIGBEE_MODE_ZCZR	
 	-I..\OpenThings-Framework-Firmware-Library
 	-flto
 	-Os
@@ -50,9 +61,14 @@ build_flags =
 build_unflags = 
 	-fno-lto
 extra_scripts = 
-	pre:fix_linker.py
+	fix_linker.py
+	remove_helix_mp3.py
+lib_ignore =
+   Zigbee
 lib_deps = 
 	Ethernet
+	Matter
+	#Zigbee
 	https://github.com/ThingPulse/esp8266-oled-ssd1306/archive/4.2.0.zip
 	knolleary/PubSubClient @ ^2.8
 	https://github.com/OpenSprinklerShop/ArduinoWebSockets
@@ -60,18 +76,7 @@ lib_deps =
 	symlink://../OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
-build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sensor_ospi*> -<opensprinkler_matter.cpp>
-# to get it running: 
-# 1. You need a OpenSprinkler with ESPC5-12 and W25Q128 external flash
-# 2. Edit pins_arduino.h: 
-#static const uint8_t TX = 11;
-#static const uint8_t RX = 12;
-#static const uint8_t SDA = 27;
-#static const uint8_t SCL = 26;
-#static const uint8_t SS = 6;
-#static const uint8_t MOSI = 5;
-#static const uint8_t MISO = 4;
-#static const uint8_t SCK = 3;
+build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sensor_ospi*> -<managed_components/*>
 
 [env:os3x_esp8266]
 platform = espressif8266@4.2.1
