feat: Implement lazy-loading plan for sensor interface and optimize memory usage
- Added a new document detailing the lazy-loading architecture for sensor management, including current and target states, memory savings, and migration phases.
- Introduced a new `idf_component.yml` file to specify dependencies for the project, requiring IDF version 5.1 or higher.

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,10 +26,13 @@ build_cache_dir = .pio/cache
 #static const uint8_t MISO = 14;
 #static const uint8_t SCK = 6;
 # See: https://community.platformio.org/t/esp32c6-arduino-3-00-and-zigbee-support/40094/18
-platform = https://github.com/pioarduino/platform-espressif32.git
+# Use local platform with framework junction link in .platformio/packages
+platform = d:/Projekte/platform-espressif32
 framework = arduino
 board = os4proEsp32
 board_build.mcu = esp32c5
+board_build.flash_mode = qio
+board_build.psram_type = qio
 board_build.filesystem = littlefs
 board_build.partitions = os4_matter.csv
 board_build.sdkconfig = sdkconfig.esp32-c5
@@ -49,9 +52,19 @@ build_flags =
 	-D OS_ENABLE_BLE
 	-D ENABLE_MATTER
 	-D ENABLE_DEBUG
+	-D ENABLE_MEMORY_DEBUG
 	-D OTF_USE_PSRAM=1
 	-D OTF_USE_PSRAM_FOR_SSL=1
 	-D OTF_ENABLE_PSRAM_POOL=1
+	-D CHIP_CONFIG_MEMORY_MANAGEMENT_SMALL_BUFFER_POOL=1
+	-D CHIP_CONFIG_MEMORY_MANAGEMENT_MALLOC_LIMIT=80000
+	-D CHIP_SYSTEM_CONFIG_PACKETBUFFER_POOL_SIZE=8
+	-D CHIP_CONFIG_MAX_EXCHANGE_CONTEXTS=4
+	-D CHIP_CONFIG_MAX_BINDINGS=3
+	-D CHIP_CONFIG_MAX_FABRICS=3
+	-D CHIP_CONFIG_MAX_PATHS_PER_INVOKE=3
+	-D CHIP_IM_MAX_NUM_COMMAND_HANDLER=2
+	-D CHIP_IM_MAX_NUM_WRITE_HANDLER=2
 	#-D SERIAL_DEBUG
 	#-D ZIGBEE_MODE_ZCZR	
 	-I..\OpenThings-Framework-Firmware-Library
