--- a/platformio.ini
+++ b/platformio.ini
@@ -71,6 +71,9 @@ build_flags =
 	-flto
 	-Os
 	-Wl,--gc-sections
+	-Wl,-Map,.pio/build/esp32-c5/firmware.map
+	-Wl,--cref
+	-Wl,--print-memory-usage
 build_unflags = 
 	-fno-lto
 extra_scripts = 
