Refactor code structure for improved readability and maintainability

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,89 @@ src_dir = .
 include_dir = .
 build_cache_dir = .pio/cache
 
-[env:esp32-c5]
+[env:esp32-c5-zigbee]
+# to get it running: 
+# 1. You need a OpenSprinkler with ESP32-C5-WROOM-1-N8R8 and W25Q128 external flash
+# 2. Edit pins_arduino.h: 
+#static const uint8_t TX = 11;
+#static const uint8_t RX = 12;
+#static const uint8_t SDA = 0;
+#static const uint8_t SCL = 1;
+#static const uint8_t SS = 5;
+#static const uint8_t MOSI = 13;
+#static const uint8_t MISO = 14;
+#static const uint8_t SCK = 6;
+# See: https://community.platformio.org/t/esp32c6-arduino-3-00-and-zigbee-support/40094/18
+# Use local platform with framework junction link in .platformio/packages
+platform = d:/Projekte/platform-espressif32
+framework = arduino
+board = os4proEsp32
+board_build.mcu = esp32c5
+board_build.flash_mode = qio
+board_build.psram_type = qio
+board_build.filesystem = littlefs
+board_build.partitions = os4_matter.csv
+board_build.sdkconfig = sdkconfig.esp32-c5
+upload_protocol = esptool
+monitor_filters = esp32_exception_decoder
+upload_speed = 460800
+#upload_protocol = espota
+#upload_port = 192.168.4.1          # Adjust to your ESP32 IP address
+#upload_flags = 
+#    --auth=opendoor                  # Password must match OpenSprinkler password
+monitor_speed = 115200
+build_type = debug
+build_flags = 
+	-D BOARD_HAS_PSRAM
+	-D ESP32C5
+	-D OS_ENABLE_ZIGBEE
+	-D OS_ENABLE_BLE
+	#-D ENABLE_MATTER
+	-D ENABLE_DEBUG
+	-D ENABLE_MEMORY_DEBUG
+	-D OTF_USE_PSRAM=1
+	-D OTF_USE_PSRAM_FOR_SSL=1
+	-D OTF_ENABLE_PSRAM_POOL=1
+	-D CHIP_CONFIG_MEMORY_MANAGEMENT_SMALL_BUFFER_POOL=1
+	-D CHIP_CONFIG_MEMORY_MANAGEMENT_MALLOC_LIMIT=80000
+	-D CHIP_SYSTEM_CONFIG_PACKETBUFFER_POOL_SIZE=8
+	-D CHIP_CONFIG_MAX_EXCHANGE_CONTEXTS=4
+	-D CHIP_CONFIG_MAX_BINDINGS=3
+	-D CHIP_CONFIG_MAX_FABRICS=3
+	-D CHIP_CONFIG_MAX_PATHS_PER_INVOKE=3
+	-D CHIP_IM_MAX_NUM_COMMAND_HANDLER=2
+	-D CHIP_IM_MAX_NUM_WRITE_HANDLER=2
+	#-D SERIAL_DEBUG
+	-D ZIGBEE_MODE_ZCZR	
+	-I..\OpenThings-Framework-Firmware-Library
+	-flto
+	-Os
+	-Wl,--gc-sections
+	-Wl,-Map,.pio/build/esp32-c5/firmware.map
+	-Wl,--cref
+	-Wl,--print-memory-usage
+build_unflags = 
+	-fno-lto
+extra_scripts = 
+	fix_linker.py
+	remove_helix_mp3.py
+lib_ignore =
+    #Zigbee
+    Matter 
+lib_deps = 
+	Ethernet
+	#Matter
+	Zigbee
+	https://github.com/ThingPulse/esp8266-oled-ssd1306/archive/4.2.0.zip
+	knolleary/PubSubClient @ ^2.8
+	https://github.com/OpenSprinklerShop/ArduinoWebSockets
+	#https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
+	symlink://../OpenThings-Framework-Firmware-Library
+	RobTillaart/ADS1X15
+	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
+build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sensor_ospi*> -<managed_components/*>
+
+[env:esp32-c5-matter]
 # to get it running: 
 # 1. You need a OpenSprinkler with ESP32-C5-WROOM-1-N8R8 and W25Q128 external flash
 # 2. Edit pins_arduino.h: 
