Refactor code structure for improved readability and maintainability

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,8 +27,9 @@ build_cache_dir = .pio/cache
 #static const uint8_t SCK = 6;
 # See: https://community.platformio.org/t/esp32c6-arduino-3-00-and-zigbee-support/40094/18
 # Use local platform with framework junction link in .platformio/packages
-platform = d:/Projekte/platform-espressif32
-framework = arduino
+platform = file://../platform-espressif32
+platform_packages = 
+	framework-espidf @ file://../esp-idf
 board = os4proEsp32
 board_build.mcu = esp32c5
 board_build.flash_mode = qio
@@ -53,35 +54,17 @@ build_flags =
 	#-D ENABLE_MATTER
 	-D ENABLE_DEBUG
 	-D ENABLE_MEMORY_DEBUG
-	-D OTF_USE_PSRAM=1
-	-D OTF_USE_PSRAM_FOR_SSL=1
-	-D OTF_ENABLE_PSRAM_POOL=1
-	-D CHIP_CONFIG_MEMORY_MANAGEMENT_SMALL_BUFFER_POOL=1
-	-D CHIP_CONFIG_MEMORY_MANAGEMENT_MALLOC_LIMIT=80000
-	-D CHIP_SYSTEM_CONFIG_PACKETBUFFER_POOL_SIZE=8
-	-D CHIP_CONFIG_MAX_EXCHANGE_CONTEXTS=4
-	-D CHIP_CONFIG_MAX_BINDINGS=3
-	-D CHIP_CONFIG_MAX_FABRICS=3
-	-D CHIP_CONFIG_MAX_PATHS_PER_INVOKE=3
-	-D CHIP_IM_MAX_NUM_COMMAND_HANDLER=2
-	-D CHIP_IM_MAX_NUM_WRITE_HANDLER=2
 	#-D SERIAL_DEBUG
 	-D ZIGBEE_MODE_ZCZR	
 	-I..\OpenThings-Framework-Firmware-Library
-	-flto
-	-Os
-	-Wl,--gc-sections
-	-Wl,-Map,.pio/build/esp32-c5/firmware.map
-	-Wl,--cref
-	-Wl,--print-memory-usage
-build_unflags = 
-	-fno-lto
 extra_scripts = 
-	fix_linker.py
 	remove_helix_mp3.py
 lib_ignore =
     #Zigbee
     Matter 
+    SD
+    SPIFFS
+    FFat
 lib_deps = 
 	Ethernet
 	#Matter
@@ -131,43 +114,13 @@ build_type = debug
 build_flags = 
 	-D BOARD_HAS_PSRAM
 	-D ESP32C5
-	#-D OS_ENABLE_ZIGBEE 
 	-D OS_ENABLE_BLE
 	-D ENABLE_MATTER
 	-D ENABLE_DEBUG
 	-D ENABLE_MEMORY_DEBUG
-	-D OTF_USE_PSRAM=1
-	-D OTF_USE_PSRAM_FOR_SSL=1
-	-D OTF_ENABLE_PSRAM_POOL=1
-	-D MBEDTLS_SSL_PROTO_TLS1_3
-	-D CONFIG_MBEDTLS_SSL_PROTO_TLS1_3=1
-	-D CORE_DEBUG_LEVEL=0
-	-D CHIP_CONFIG_MEMORY_MANAGEMENT_SMALL_BUFFER_POOL=1
-	-D CHIP_CONFIG_MEMORY_MANAGEMENT_MALLOC_LIMIT=80000
-	-D CHIP_SYSTEM_CONFIG_PACKETBUFFER_POOL_SIZE=8
-	-D CHIP_CONFIG_MAX_EXCHANGE_CONTEXTS=4
-	-D CHIP_CONFIG_MAX_BINDINGS=3
-	-D CHIP_CONFIG_MAX_FABRICS=3
-	-D CHIP_CONFIG_MAX_PATHS_PER_INVOKE=3
-	-D CHIP_IM_MAX_NUM_COMMAND_HANDLER=2
-	-D CHIP_IM_MAX_NUM_WRITE_HANDLER=2
 	#-D SERIAL_DEBUG
-	#-D ZIGBEE_MODE_ZCZR	
 	-I..\OpenThings-Framework-Firmware-Library
-	-ffunction-sections
-	-fdata-sections
-	-fno-exceptions
-	-fno-rtti
-	-flto
-	-Os
-	-Wl,--gc-sections
-	-Wl,-Map,.pio/build/esp32-c5/firmware.map
-	-Wl,--cref
-	-Wl,--print-memory-usage
-build_unflags = 
-	-fno-lto
 extra_scripts = 
-	fix_linker.py
 	remove_helix_mp3.py
 lib_ignore =
    Zigbee
