Refactor and optimize memory management for ESP32-C5
- Updated InfluxDB submodule to a dirty state.
- Modified UI animation character array and reboot ticker to use EXT_RAM_BSS_ATTR for better memory management.
- Removed deprecated mainArduino.ino file.
- Enhanced OSMatter class to store Matter pairing information and added methods to retrieve QR code and manual pairing code.
- Implemented JSON output for Matter pairing information in the server.
- Updated platformio.ini to include Arduino framework and adjusted library dependencies.
- Adjusted sdkconfig for improved memory handling and disabled unnecessary Bluetooth features.
- Added Python scripts for configuration management and cleanup.
- Introduced AES software fallback wrapper to handle low internal RAM scenarios.
- Created documentation for fixing hardware AES memory issues and quick fixes.
- Added build scripts for rebuilding mbedTLS with software AES support.

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,7 @@ build_cache_dir = .pio/cache
 platform = file://../platform-espressif32
 platform_packages = 
 	framework-espidf @ file://../esp-idf
+	framework-arduinoespressif32 @ file://../arduino-esp32
 board = os4proEsp32
 board_build.mcu = esp32c5
 board_build.flash_mode = qio
@@ -59,6 +60,7 @@ build_flags =
 	-I..\OpenThings-Framework-Firmware-Library
 extra_scripts = 
 	remove_helix_mp3.py
+	fix_build.py
 lib_ignore =
     #Zigbee
     Matter 
@@ -71,7 +73,7 @@ lib_deps =
 	Zigbee
 	https://github.com/ThingPulse/esp8266-oled-ssd1306/archive/4.2.0.zip
 	knolleary/PubSubClient @ ^2.8
-	https://github.com/OpenSprinklerShop/ArduinoWebSockets
+	symlink://../arduinoWebSockets
 	#https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
 	symlink://../OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
@@ -94,6 +96,7 @@ build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sens
 platform = file://../platform-espressif32
 platform_packages = 
 	framework-espidf @ file://../esp-idf
+	framework-arduinoespressif32 @ file://../arduino-esp32
 framework = arduino
 board = os4proEsp32
 board_build.mcu = esp32c5
@@ -120,8 +123,13 @@ build_flags =
 	-D ENABLE_MEMORY_DEBUG
 	#-D SERIAL_DEBUG
 	-I..\OpenThings-Framework-Firmware-Library
+	-D WEBSOCKETS_SAVE_RAM
+	-D WEBSOCKETS_MAX_DATA_SIZE=4096
+	-D NODEBUG_WEBSOCKETS
+	-Wl,--no-relax
 extra_scripts = 
 	remove_helix_mp3.py
+	fix_build.py
 lib_ignore =
    Zigbee
    SD
@@ -133,7 +141,7 @@ lib_deps =
 	#Zigbee
 	https://github.com/ThingPulse/esp8266-oled-ssd1306/archive/4.2.0.zip
 	knolleary/PubSubClient @ ^2.8
-	https://github.com/OpenSprinklerShop/ArduinoWebSockets
+	symlink://../arduinoWebSockets
 	#https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
 	symlink://../OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
