Add Matter & BLE RAM Optimization Guide and related configurations
- Introduced a comprehensive guide for optimizing RAM usage for Matter and BLE on ESP32-C5, detailing critical considerations for WiFi DMA and BLE stack settings.
- Created `matter_ble_optimize.h` for optimized configurations, reducing RAM usage for Matter and BLE features.
- Implemented custom memory allocators for mbedTLS to utilize SPIRAM when internal RAM is exhausted in `mbedtls_spiram_alloc.c`.
- Added a pre-build script `pre_build_sdkconfig.py` to automate sdkconfig modifications for optimizing BLE and WiFi RAM usage.
- Developed PSRAM debugging utilities in `psram_debug.cpp` and `psram_debug.h` to log memory allocation patterns and track PSRAM usage.

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,17 +27,13 @@ build_cache_dir = .pio/cache
 #static const uint8_t SCK = 6;
 # See: https://community.platformio.org/t/esp32c6-arduino-3-00-and-zigbee-support/40094/18
 # Use local platform with framework junction link in .platformio/packages
-platform = file://../platform-espressif32
-platform_packages = 
-	framework-espidf @ file://../esp-idf
-	framework-arduinoespressif32 @ file://../arduino-esp32
+platform = https://github.com/pioarduino/platform-espressif32.git#develop
 board = os4proEsp32
 board_build.mcu = esp32c5
 board_build.flash_mode = qio
 board_build.psram_type = qio
 board_build.filesystem = littlefs
 board_build.partitions = os4_matter.csv
-board_build.sdkconfig = sdkconfig.esp32-c5
 upload_protocol = esptool
 monitor_filters = esp32_exception_decoder
 upload_speed = 460800
@@ -58,9 +54,9 @@ build_flags =
 	#-D SERIAL_DEBUG
 	-D ZIGBEE_MODE_ZCZR	
 	-I..\OpenThings-Framework-Firmware-Library
-extra_scripts = 
-	remove_helix_mp3.py
-	fix_build.py
+	-D WEBSOCKETS_SAVE_RAM
+	-D WEBSOCKETS_MAX_DATA_SIZE=4096
+	-D NODEBUG_WEBSOCKETS
 lib_ignore =
     #Zigbee
     Matter 
@@ -73,9 +69,9 @@ lib_deps =
 	Zigbee
 	https://github.com/ThingPulse/esp8266-oled-ssd1306/archive/4.2.0.zip
 	knolleary/PubSubClient @ ^2.8
-	symlink://../arduinoWebSockets
+	file://../ArduinoWebSockets
 	#https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
-	symlink://../OpenThings-Framework-Firmware-Library
+	file://../OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
 build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sensor_ospi*> -<managed_components/*>
@@ -93,10 +89,7 @@ build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sens
 #static const uint8_t MISO = 14;
 #static const uint8_t SCK = 6;
 # See: https://community.platformio.org/t/esp32c6-arduino-3-00-and-zigbee-support/40094/18
-platform = file://../platform-espressif32
-platform_packages = 
-	framework-espidf @ file://../esp-idf
-	framework-arduinoespressif32 @ file://../arduino-esp32
+platform = https://github.com/pioarduino/platform-espressif32.git#develop
 framework = arduino
 board = os4proEsp32
 board_build.mcu = esp32c5
@@ -104,7 +97,6 @@ board_build.flash_mode = qio
 board_build.psram_type = qio
 board_build.filesystem = littlefs
 board_build.partitions = os4_matter.csv
-board_build.sdkconfig = sdkconfig.esp32-c5
 upload_protocol = esptool
 monitor_filters = esp32_exception_decoder
 upload_speed = 460800
@@ -114,8 +106,13 @@ upload_speed = 460800
 #    --auth=opendoor                  # Password must match OpenSprinkler password
 monitor_speed = 115200
 build_type = debug
+extra_scripts = 
+	pre:pre_build_sdkconfig.py
+	fix_build.py
 build_flags = 
 	-D BOARD_HAS_PSRAM
+	-D SOC_PSRAM_DMA_CAPABLE
+	-D SOC_CACHE_INTERNAL_MEM_VIA_L1CACHE
 	-D ESP32C5
 	-D OS_ENABLE_BLE
 	-D ENABLE_MATTER
@@ -126,10 +123,6 @@ build_flags =
 	-D WEBSOCKETS_SAVE_RAM
 	-D WEBSOCKETS_MAX_DATA_SIZE=4096
 	-D NODEBUG_WEBSOCKETS
-	-Wl,--no-relax
-extra_scripts = 
-	remove_helix_mp3.py
-	fix_build.py
 lib_ignore =
    Zigbee
    SD
@@ -138,15 +131,16 @@ lib_ignore =
 lib_deps = 
 	Ethernet
 	Matter
+	BLE
 	#Zigbee
 	https://github.com/ThingPulse/esp8266-oled-ssd1306/archive/4.2.0.zip
 	knolleary/PubSubClient @ ^2.8
-	symlink://../arduinoWebSockets
+	file://../ArduinoWebSockets
 	#https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
-	symlink://../OpenThings-Framework-Firmware-Library
+	file://../OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
-build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sensor_ospi*> -<managed_components/*>
+build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sensor_ospi*> -<managed_components/*> -<OpenThingsLib/*>
 
 [env:os3x_esp8266]
 platform = espressif8266@4.2.1
